--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 	<link href="style.css" rel="stylesheet">
 </head>
 <body>
-
-<!-- Navigation -->
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 <div class="container-fluid">
 	<a href="#" class="navbar-brand"><img src="img/logo.png"></a>
@@ -43,26 +41,13 @@
 </div>
 </nav>
 
-<!--- Image Slider -->
-<div id="slides" class="carousel slide" data-ride="carousel">
-	<ul class="carousel-indicators">
-		<li data-target="#slides" data-slide-to="0" class="active"></li>
-		<li data-target="#slides" data-slide-to="1"></li>
-	</ul>
-	<div class="carousel-inner">
-		<div class="carousel-item active">
-			<img src="img/light-bulb.jpg" >
-			<div class="carousel-caption">
-				<h1 class="display-2">Upgrade your online presence</h1>
-				<h3>Design, Development, & Marketing</h3>
-				<button class="btn btn-outline-light btn-lg">Learn more</button>
-			</div>
-		</div>
-		<div class="carousel-item">
-			<img src="img/man-writing.jpg">
-		</div>
+<header>
+	<div class="header-box">
+		<h1>Upgrade your online presence</h1>
+		<h3>Design. Development. Marketing</h3>
+		<button class="btn btn-primary">Learn more</button>
 	</div>
-</div>
+</header>
 
 <!--- Jumbotron -->
 <div class="container-fluid">
